--- a/package.json
+++ b/package.json
@@ -13,8 +13,7 @@
   "dependencies": {
     "vue": "^2.4.2",
     "vue-resource": "^1.3.4",
-    "vue-router": "^2.7.0",
-    "better-scroll": "^1.3.0"
+    "vue-router": "^2.7.0"
   },
   "devDependencies": {
     "autoprefixer": "^7.1.2",
